# singletons-test

./: .gitignore  cabal.config  cabal.project  flake.nix  singletons-test.cabal
app/: Main.hs
src/: SingletonsTest.hs
src/Core/: SingDSI.hs
src/Models/: Door.hs  DoorState.hs  List.hs  SomeDoor.hs
