cabal-version:        2.4
name:                 singletons-test
version:              0.1.0.0

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:
    -Wunused-imports
    -Wunticked-promoted-constructors
    -Wincomplete-patterns
  exposed-modules:
    Core.SingDSI
    Models.Door
    Models.DoorState
    Models.List
    Models.SomeDoor
    SingletonsTest
  other-modules:

  default-extensions:
      TemplateHaskell
    , OverloadedStrings
    , OverloadedRecordDot

  build-depends:
    , base >=4.15
    , relude ^>= 1.1.0.0
    , singletons
    , singletons-base
    , singletons-th

  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)

executable singletons-test
  main-is:            Main.hs
  hs-source-dirs:     app
  ghc-options:
    -threaded
  default-language:   Haskell2010

  build-depends:
      base >=4.15
    , singletons-test

test-suite test
  main-is:            Driver.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:
    -Wunused-imports
  type:               exitcode-stdio-1.0

  other-modules:

  build-tool-depends:
      tasty-discover:tasty-discover

  build-depends:
    -- Base
    , base >= 4
    , relude ^>= 1.1.0.0
    -- Test packages:
    -- Main src:
    , singletons-test

  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)
